# ppmx

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: pylint.yml
_sources/: api.rst.txt  commands.rst.txt  introduction.rst.txt  usage.rst.txt
docs/: conf.py
docs/_build/doctrees/: api.doctree  commands.doctree  environment.pickle  index.doctree  introduction.doctree  usage.doctree
docs/_build/html/: commands.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html
docs/_build/html/_sources/: index.rst.txt
src/: init.py  main.py  package.py  run.py
